Updated coding and commenting. Updated CSS. Added main.js Customized Business Hours box

--- a/about.html
+++ b/about.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta & Title -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Unique Ornamental Iron | Homeland CA Ironwork Experts Since 1990</title>
+
+  <!-- Styles & Fonts -->
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet">
-  <meta name="description" content="Learn about Unique Ornamental Iron's 30+ years of family-owned expertise in custom iron gates, fencing, and ornamental metalwork across Homeland CA and Southern California.">
-  <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="assets/css/style.css?v=2" />
+  <link rel="stylesheet" href="assets/css/style.css?v=2" /> <!-- optional cache-busting -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-  <script type = "application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "LocalBusiness",
-            "name": "Unique Ornamental Iron Inc.",
-            "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg"
-            "@id": "",
-            "url": "https://lonewolfc6.github.io/unique-ornamental-iron/"
-            "telephone": "(760) 981-2026",
-            "address": {
-                "@type" : "PostalAddress",
-                "streetAddress": "Homeland CA",
-                "addressLocality": "Homeland",
-                "postalCode": "",
-                "addressCountry": "US"
-            },
-            "geo": {
-                "@type": "GeoCoordinates",
-                "latitude": 33.742,
-                "longitude": -117.113
-            },
-            "sameAs": [
-            "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
-            "https://www.facebook.com/profile.php?id=100063850229702"
-            ],
-            "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
-        }
-    </script>
+  <!-- SEO Meta -->
+  <meta name="description" content="Learn about Unique Ornamental Iron's 30+ years of family-owned expertise in custom iron gates, fencing, and ornamental metalwork across Homeland CA and Southern California." />
+  <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron" />
 
+  <!-- Local Business Schema -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Unique Ornamental Iron Inc.",
+      "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg",
+      "@id": "",
+      "url": "https://lonewolfc6.github.io/unique-ornamental-iron/",
+      "telephone": "(760) 981-2026",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Homeland CA",
+        "addressLocality": "Homeland",
+        "postalCode": "",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 33.742,
+        "longitude": -117.113
+      },
+      "sameAs": [
+        "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
+        "https://www.facebook.com/profile.php?id=100063850229702"
+      ],
+      "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
+    }
+  </script>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-QVXNBNRGT7');
+  </script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-QVXNBNRGT7');
-</script>
-<body class = "default">
-
+<body class="default">
+  <!-- Header -->
   <header>
     <h1>Unique Ornamental Iron Inc.</h1>
     <h2>About Unique Ornamental Iron — Your Local Gate & Fencing Experts</h2>
@@ -59,39 +65,67 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="highlights.html">Highlights</a></li>
+        <li><a href="highlights.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
+    <!-- About Section -->
     <section class="about">
       <h2>About Us</h2>
       <h3>Family-Owned & Operated Across Generations</h3>
-      <p>Founded in 1990 by Rodney J., Unique Ornamental Iron Inc. has grown from a small portable welding business into a family-run leader in the Southern California gate and fencing industry. With roots in metal fabrication passed down through generations, our team builds with passion, precision, and pride.
 
-      <p>From beautifully crafted residential gates to durable commercial fencing solutions, our work is tailored to your vision — because if you can dream it, we can build it.</p>
+      <p>
+        Founded in 1995 by Rodney J., Unique Ornamental Iron Inc. has grown from a small portable welding business into a family-run leader in the Southern California gate and fencing industry. With roots in metal fabrication passed down through generations, our team builds with passion, precision, and pride.
+      </p>
 
-      <p>Today, Rodney and his sons Ryan and Chad carry forward the values that started it all: integrity, craftsmanship, and a deep commitment to helping others.</p>
+      <p>
+        From beautifully crafted residential gates to durable commercial fencing solutions, our work is tailored to your vision — because if you can dream it, we can build it.
+      </p>
 
-      <p>Made in the USA. Built to last. Powered by family.</p>
-      
+      <p>
+        Today, Rodney and his sons Ryan and Chad carry forward the values that started it all: integrity, craftsmanship, and a deep commitment to helping others.
+      </p>
+
+      <p>
+        Made in the USA. Built to last. Powered by family.
+      </p>
     </section>
 
+    <!-- Map Section -->
     <section id="service-area" class="service-area">
       <h2>Our Service Area</h2>
       <h3>Homeland, CA & Surrounding Regions</h3>
-        <img src="assets/images/riverside-map.png" alt="Our service area — based in Homeland and serving Riverside County">
-        <p>Located in Homeland, CA, we proudly serve clients throughout Riverside County: Homeland, Hemet, Winchester, Nuevo, Romoland, Menifee, and surrounding areas.</p>
-    </section>
 
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423286.2746236363!2d-117.55424464340442!3d33.83584959184398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db78bc2ba36f3f%3A0x6cb295a50a3dbe2b!2sHomeland%2C%20CA!5e0!3m2!1sen!2sus!4v1680217177381!5m2!1sen!2sus"
+        width="100%"
+        height="450"
+        style="border:0; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+
+      <p>
+        Located in Homeland, CA, we proudly serve clients throughout Riverside County: Homeland, Hemet, Winchester, Nuevo, Romoland, Menifee, and surrounding areas.
+      </p>
+    </section>
   </main>
 
+  <!-- Footer -->
   <footer>
-        <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br>
-        Licensed, Bonded & Insured — CA LIC#709394</p>
-    </footer>
+    <p>
+      &copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br />
+      Licensed, Bonded & Insured — CA LIC#709394
+    </p>
+  </footer>
+
+  <!-- External Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
