--- a/contact.html
+++ b/contact.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta & Title -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Unique Ornamental Iron | Request a Custom Iron Gate or Fence Quote</title>
+
+  <!-- Styles & Fonts -->
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet">
-  <meta name="description" content="Get in touch with Unique Ornamental Iron in Homeland CA for quotes on custom iron gates, fencing, and railings. Serving Southern California homes & businesses since 1990.">
-  <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css?v=2" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-  <script type = "application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "LocalBusiness",
-            "name": "Unique Ornamental Iron Inc.",
-            "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg"
-            "@id": "",
-            "url": "https://lonewolfc6.github.io/unique-ornamental-iron/"
-            "telephone": "(760) 981-2026",
-            "address": {
-                "@type" : "PostalAddress",
-                "streetAddress": "Homeland CA",
-                "addressLocality": "Homeland",
-                "postalCode": "",
-                "addressCountry": "US"
-            },
-            "geo": {
-                "@type": "GeoCoordinates",
-                "latitude": 33.742,
-                "longitude": -117.113
-            },
-            "sameAs": [
-            "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
-            "https://www.facebook.com/profile.php?id=100063850229702"
-            ],
-            "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
-        }
-    </script>
+  <!-- SEO Meta -->
+  <meta name="description" content="Get in touch with Unique Ornamental Iron in Homeland CA for quotes on custom iron gates, fencing, and railings. Serving Southern California homes & businesses since 1990." />
+  <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron" />
 
+  <!-- Local Business Schema -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Unique Ornamental Iron Inc.",
+      "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg",
+      "@id": "",
+      "url": "https://lonewolfc6.github.io/unique-ornamental-iron/",
+      "telephone": "(760) 981-2026",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Homeland CA",
+        "addressLocality": "Homeland",
+        "postalCode": "",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 33.742,
+        "longitude": -117.113
+      },
+      "sameAs": [
+        "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
+        "https://www.facebook.com/profile.php?id=100063850229702"
+      ],
+      "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
+    }
+  </script>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-QVXNBNRGT7');
+  </script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-QVXNBNRGT7');
-</script>
-<body class = "default">
-
+<body class="default">
+  <!-- Header -->
   <header>
     <h1>Unique Ornamental Iron Inc.</h1>
     <h2>Contact Homeland CA's Iron Gate & Fencing Specialists</h2>
@@ -59,25 +65,26 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="highlights.html">Highlights</a></li>
+        <li><a href="highlights.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
+    <!-- Contact Form Section -->
     <section class="contact">
       <h2>Get in Touch</h2>
       <h3>Contact Unique Ornamental Iron in Homeland, CA</h3>
-      <p>Prefer to talk directly? Give us a call at (760) 981-2026 or check out our Yelp page to see what others are saying.</p>
+      <p>Prefer to talk directly? Give us a call at <strong>(760) 981-2026</strong> or check out our Yelp page to see what others are saying.</p>
       <p>Have a question or want a quote? Reach out below!</p>
 
       <form action="https://formspree.io/f/your-form-id" method="POST">
         <label for="name">Name</label>
-        <input type="text" name="name" required>
+        <input type="text" name="name" required />
 
         <label for="email">Email</label>
-        <input type="email" name="email" required>
+        <input type="email" name="email" required />
 
         <label for="message">Message</label>
         <textarea name="message" rows="5" required></textarea>
@@ -86,54 +93,34 @@
       </form>
     </section>
 
-    <section class = "hours">
-      <h2>Business Hours</h2>
-      <h3>Current Weekly Hours of Operation</h3>
-      <h3>-------------------------------------------------</h3>
-      <ul>
-        <li><strong>Monday:</strong> 9:00 AM - 5:00 PM</li>
-        <li><strong>Tuesday:</strong> 9:00 AM - 5:00 PM</li>
-        <li><strong>Wednesday:</strong> 9:00 AM - 5:00 PM</li>
-        <li><strong>Thursday:</strong> 9:00 AM - 5:00 PM</li>
-        <li><strong>Friday:</strong> 9:00 AM - 5:00 PM</li>
-        <li><strong>Saturday:</strong> Closed</li>
-        <li><strong>Sunday:</strong> Closed</li>
-      </ul>
+    <!-- Business Hours Section -->
+    <section class="hours">
+      <div class="hours-box">
+        <h2>Business Hours</h2>
+        <ul>
+          <li data-day="1"><strong>Monday:</strong> 9:00 AM – 5:00 PM <span class="status"></span></li>
+          <li data-day="2"><strong>Tuesday:</strong> 9:00 AM – 5:00 PM <span class="status"></span></li>
+          <li data-day="3"><strong>Wednesday:</strong> 9:00 AM – 5:00 PM <span class="status"></span></li>
+          <li data-day="4"><strong>Thursday:</strong> 9:00 AM – 5:00 PM <span class="status"></span></li>
+          <li data-day="5"><strong>Friday:</strong> 9:00 AM – 5:00 PM <span class="status"></span></li>
+          <li data-day="6"><strong>Saturday:</strong> Closed <span class="status"></span></li>
+          <li data-day="0"><strong>Sunday:</strong> Closed <span class="status"></span></li>
+        </ul>
+      </div>
     </section>
-
   </main>
 
+  <!-- Footer -->
   <footer>
-        <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br>
-        Licensed, Bonded & Insured — CA LIC#709394</p>
-    </footer>
+    <p>
+      &copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br />
+      Licensed, Bonded & Insured — CA LIC#709394
+    </p>
+  </footer>
 
-  <script> 
-  const now = new Date();
-const currentDay = now.getDay(); // 0 = Sunday
-const currentHour = now.getHours(); // 24-hour format
-const hoursList = document.querySelectorAll('.hours li');
-const todayLi = hoursList[currentDay === 0 ? 6 : currentDay - 1];
+  <!-- External Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+<script src="js/main.js"></script>
 
-if (todayLi) {
-  const openHour = 9;
-  const closeHour = 17;
-  const isWeekend = currentDay === 0 || currentDay === 6;
-
-  let isOpen = false;
-
-  if (!isWeekend) {
-    isOpen = currentHour >= openHour && currentHour < closeHour;
-  }
-
-  todayLi.classList.add("today");
-  todayLi.classList.add(isOpen ? "open" : "closed");
-
-  const statusSpan = document.createElement("span");
-  statusSpan.classList.add("status");
-  statusSpan.textContent = isOpen ? "(Open Now)" : "(Closed)";
-  todayLi.appendChild(statusSpan);
-}
-  </script>
 </body>
 </html>
