--- a/index.html
+++ b/index.html
@@ -1,97 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Iron Gates & Fences | Unique Ornamental Iron - Homeland CA</title>
-    <link rel = "stylesheet" href = "assets/css/style.css" />
-    <link href = "https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel = "stylesheet">
-    <meta name="description" content="Since 1990, Unique Ornamental Iron has designed custom iron gates, fences, and railings for homes and businesses in Homeland and across Southern California." />
-    <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css?v=2" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+  <!-- Meta Basics -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Custom Iron Gates & Fences | Unique Ornamental Iron - Homeland CA</title>
 
-        gtag('config', 'G-QVXNBNRGT7');
-    </script>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css?v=2" /> <!-- Cache-busting duplicate - optional -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-    <script type = "application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "LocalBusiness",
-            "name": "Unique Ornamental Iron Inc.",
-            "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg"
-            "@id": "",
-            "url": "https://lonewolfc6.github.io/unique-ornamental-iron/"
-            "telephone": "(760) 981-2026",
-            "address": {
-                "@type" : "PostalAddress",
-                "streetAddress": "Homeland CA",
-                "addressLocality": "Homeland",
-                "postalCode": "",
-                "addressCountry": "US"
-            },
-            "geo": {
-                "@type": "GeoCoordinates",
-                "latitude": 33.742,
-                "longitude": -117.113
-            },
-            "sameAs": [
-            "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
-            "https://www.facebook.com/profile.php?id=100063850229702"
-            ],
-            "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
-        }
-    </script>
+  <!-- Meta for SEO -->
+  <meta name="description" content="Since 1995, Unique Ornamental Iron has designed custom iron gates, fences, and railings for homes and businesses in Homeland and across Southern California." />
+  <meta name="keywords" content="custom gates, wrought iron fencing, metalwork, driveway gates, iron fencing, SoCal fencing, family owned, Unique Ornamental Iron" />
 
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXNBNRGT7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-QVXNBNRGT7');
+  </script>
+
+  <!-- Local Business Schema for SEO -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Unique Ornamental Iron Inc.",
+      "image": "https://lonewolfc6.github.io/unique-ornamental-iron/assets/images/sample1.jpg",
+      "@id": "",
+      "url": "https://lonewolfc6.github.io/unique-ornamental-iron/",
+      "telephone": "(760) 981-2026",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Homeland CA",
+        "addressLocality": "Homeland",
+        "postalCode": "",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 33.742,
+        "longitude": -117.113
+      },
+      "sameAs": [
+        "https://www.yelp.com/biz/unique-ornamental-iron-homeland",
+        "https://www.facebook.com/profile.php?id=100063850229702"
+      ],
+      "description": "Unique Ornamental Iron Inc. builds custom iron gates, fencing, railings, and more throughout Homeland CA and Southern California since 1990."
+    }
+  </script>
 </head>
-<body class = "home">
-    <header>
-        <h1>Unique Ornamental Iron Inc.</h1>
-        <h2>Custom Iron Gates, Fencing & Railings in Homeland CA</h2>
-        <p>Since 1990, we've delivered handcrafted gates, fences, and metalwork for homes and businesses across Southern California. If you can dream it, we can build it.</p>
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "about.html">About</a></li>
-                <li><a href = "highlights.html">Highlights</a></li>
-                <li><a href = "contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <section class="hero">
-            <div class="hero-video-wrapper">
-                <video autoplay muted loop playsinline>
-                    <source src="assets/videos/hero.mp4" type="video/mp4" />
-                    Your browser does not support the video tag.
-                </video>
-                <div class="hero-overlay"></div>
-                <div class="hero-content">
-                    <h2>You Dream It — We Build It.</h2>
-                    <p>Since 1990, Unique Ornamental Iron has led Southern California's fencing and gate industry with unmatched craftsmanship and a passion for exceeding expectations.</p>
-                    <a href="highlights.html" class="cta-button">View Our Work</a>
-                    <a href="contact.html" class="cta-button">Get a Quote</a>
-                </div>
-            </div>
-        </section>
-        <section id="service-area" class="service-area">
-            <h2>Our Service Area</h2>
-            <h3>Homeland, CA & Surrounding Regions</h3>
-                <img src="assets/images/riverside-map.png" alt="Our service area — based in Homeland and serving Riverside County">
-                <p>Located in Homeland, CA, we proudly serve clients throughout Riverside County: Homeland, Hemet, Winchester, Nuevo, Romoland, Menifee, and surrounding areas.</p>
-        </section>
-    </main>
+<body class="home">
+  <!-- Header with Logo, Tagline, and Navigation -->
+  <header>
+    <h1>Unique Ornamental Iron Inc.</h1>
+    <h2>Custom Iron Gates, Fencing & Railings in Homeland CA</h2>
+    <p>Since 1995, we've delivered handcrafted gates, fences, and metalwork for homes and businesses across Southern California. If you can dream it, we can build it.</p>
 
-    <footer>
-        <p>&copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br>
-        Licensed, Bonded & Insured — CA LIC#709394</p>
-    </footer>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="highlights.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+
+    <!-- Hero Section: Side-by-side Layout -->
+    <section class="hero">
+      <div class="hero-side-container">
+
+        <!-- Left Panel -->
+        <div class="hero-side left">
+          <img src="assets/images/sample10.jpg" alt="Wrought iron security gate" />
+          <h2>Our Expertise</h2>
+          <p>
+            Family owned and established in 1995, Unique Ornamental Iron Inc. prides itself on being experts in wrought iron craftsmanship. Whether it's a residential project, an HOA, or a commercial job, our team ensures quality and durability in every piece we create.
+          </p>
+        </div>
+
+        <!-- Center Hero Video -->
+        <div class="hero-video-wrapper">
+          <video autoplay muted loop playsinline>
+            <source src="assets/videos/hero.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <div class="hero-overlay"></div>
+          <div class="hero-content">
+            <h2>You Dream It — We Build It.</h2>
+            <p>
+              Since 1995, Unique Ornamental Iron has led Southern California's fencing and gate industry with unmatched craftsmanship and a passion for exceeding expectations.
+            </p>
+            <a href="highlights.html" class="cta-button">View Our Work</a>
+            <a href="contact.html" class="cta-button">Get a Quote</a>
+          </div>
+        </div>
+
+        <!-- Right Panel -->
+        <div class="hero-side right">
+          <img src="assets/images/sample9.jpg" alt="Personalized fencing" />
+          <h2>Personalized Designs for Every Client</h2>
+          <p>
+            At Unique Ornamental Iron Inc, we believe that every client deserves a personalized design experience. Our team works closely with you to understand your vision and preferences. Whether you want a modern or traditional look, we can create a design that perfectly matches your style.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Service Area Map Section -->
+    <section id="service-area" class="service-area">
+      <h2>Our Service Area</h2>
+      <h3>Homeland, CA & Surrounding Regions</h3>
+
+      <!-- Embedded Google Map -->
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423286.2746236363!2d-117.55424464340442!3d33.83584959184398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db78bc2ba36f3f%3A0x6cb295a50a3dbe2b!2sHomeland%2C%20CA!5e0!3m2!1sen!2sus!4v1680217177381!5m2!1sen!2sus"
+        width="100%"
+        height="450"
+        style="border:0; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+
+      <p>
+        Located in Homeland, CA, we proudly serve clients throughout Riverside County: Homeland, Hemet, Winchester, Nuevo, Romoland, Menifee, and surrounding areas.
+      </p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>
+      &copy; 2025 Unique Ornamental Iron Inc. All rights reserved.<br />
+      Licensed, Bonded & Insured — CA LIC#709394
+    </p>
+  </footer>
+
+  <!-- External Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
