Modified text in index.html

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
   <!-- Header with Logo, Tagline, and Navigation -->
   <header>
     <h1>Unique Ornamental Iron Inc.</h1>
-    <h2>Custom Iron Gates, Fencing & Railings in Homeland CA</h2>
-    <p>Since 1995, we've delivered handcrafted gates, fences, and metalwork for homes and businesses across Southern California. If you can dream it, we can build it.</p>
+    <h2>Expert Wrought Iron Solutions for You</h2>
+    <p>Custom gates, railings and more for security and beauty to homes, HOA's and businesses.</p>
+    <p><bold>WE PROUDLY SERVE SOUTHERN CALIFORNIA</bold></p>
+    <div>---------------------------------------------------------------------------------------------------------------------------------</div>
 
     <nav>
       <ul>
