Added header divider

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h2>Expert Wrought Iron Solutions for You</h2>
     <p>Custom gates, railings and more for security and beauty to homes, HOA's and businesses.</p>
     <p><bold>WE PROUDLY SERVE SOUTHERN CALIFORNIA</bold></p>
-    <div>---------------------------------------------------------------------------------------------------------------------------------</div>
+    <hr class="header-divider" />
 
     <nav>
       <ul>
